fixed nav-brand on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,7 +18,7 @@ a:hover {
 }
 
 .nav-img {
-	width: 20%;
+	height: 40px;
 }
 .navbar {
 	background-color: #f8b189;
